<resources>
    <string name="app_name">xmcproject</string>
    <string name="title_login_username">"Username: "</string>
    <string name="title_login_username_hint">Enter your username</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save">Save information</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm exit</string>
    <string name="title_confirm_exit_message">Are you sure? You want to exit!</string>
    <string name="title_confirm_exit_yes">Yes</string>
    <string name="title_confirm_exit_cancel">No</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer\n</string>
    <string name="title_login_button">Login</string>
    <string name="title_employee_management_title">Employee Management</string>
    <string name="title_employee_management_name">Employee name</string>
    <string name="title_employee_management_ID">Employee ID</string>
    <string name="title_employee_management_position">Employee position</string>
    <string name="title_employee_management_add">Add employee</string>

</resources>
