<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/employee_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_employee_management_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_employee_management_ID" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/title_employee_management_name" />

        <EditText
            android:id="@+id/edtPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_employee_management_position" />


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_employee_management_add" />

        <TextView
            android:id="@+id/employee_list_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:text="Employee List"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TableLayout
            android:id="@+id/employee_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:background="#EEEEEE">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Employee ID"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Employee name"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Employee position"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>
